thy/Examples/Ringofsaturn_com/iptables-save
# Generated by iptables-save v1.4.21 on Wed Jul  1 13:41:36 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2:140]
:DUMP - [0:0]
:STATEFUL - [0:0]
-A INPUT -j STATEFUL
-A INPUT -i lo -j ACCEPT
-A INPUT -s 0.0.0.0/8 -i eth0 -j DUMP
-A INPUT -s 10.0.0.0/8 -i eth0 -j DUMP
-A INPUT -s 127.0.0.0/8 -i eth0 -j DUMP
-A INPUT -s 169.254.0.0/16 -i eth0 -j DUMP
-A INPUT -s 172.16.0.0/12 -i eth0 -j DUMP
-A INPUT -s 224.0.0.0/3 -i eth0 -j DUMP
-A INPUT -s 240.0.0.0/8 -i eth0 -j DUMP
-A INPUT -s 160.86.0.0/16 -i eth1 -j ACCEPT
-A INPUT -i eth1 -j DROP
-A INPUT -i eth0 -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -i eth0 -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -i eth0 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -i eth0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 111 -j DROP
-A INPUT -i eth0 -p tcp -m tcp --dport 113 -j REJECT --reject-with tcp-reset
-A INPUT -i eth0 -p tcp -m tcp --dport 4 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 20 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 21 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 20 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 21 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 22 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 443 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 520 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -i eth0 -p tcp -m tcp --dport 137:139 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -i eth0 -p udp -m udp --dport 137:139 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j DUMP
-A OUTPUT -o lo -j ACCEPT
-A DUMP -p tcp -j LOG
-A DUMP -p udp -j LOG
-A DUMP -p tcp -j REJECT --reject-with tcp-reset
-A DUMP -p udp -j REJECT --reject-with icmp-port-unreachable
-A DUMP -j DROP
-A STATEFUL -m state --state RELATED,ESTABLISHED -j ACCEPT
-A STATEFUL -m state --state NEW -j ACCEPT
-A STATEFUL -j DUMP
COMMIT
# Completed on Wed Jul  1 13:41:36 2015
